[package]
name = "eupp"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "eupp-cli","eupp-core", "eupp-db", "eupp-net"]

[dependencies]
eupp-core = { path = "./eupp-core" }
eupp-net = { path = "./eupp-net" }
eupp-db = { path = "./eupp-db" }
tokio = { version = "1.0", features = ["full"] }
blake2 = "0.10.6"
hex = "0.4.3"

# HTTP API and serialization dependencies used by the top-level binary
axum = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
