[package]
name = "eupp"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "eupp-cli","eupp-core", "eupp-db", "eupp-net"]

[dependencies]
eupp-core = { path = "./eupp-core" }
eupp-net = { path = "./eupp-net" }
eupp-db = { path = "./eupp-db" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
hex = "0.4.3"
rand = "0.9.2"

# HTTP API and serialization dependencies used by the top-level binary
axum = { version = "0.6", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
