[package]
name = "eupp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace crates
eupp-core = { path = "../eupp-core" }
ed25519-dalek = { version = "3.0.0-pre.3", features = ["rand_core"] }
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }

reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
