[package]
name = "eupp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace crates
eupp-core = { path = "../eupp-core" }
hex = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json", "blocking"] }
