[package]
name = "eupp-net"
version = "0.1.0"
edition = "2024"

[dependencies]
eupp-core = { path = "../eupp-core" }
eupp-rpc = { path = "../eupp-rpc" }
jsonrpsee = { version = "0.22", features = ["server"] }
libp2p = { version = "0.56", features = ["gossipsub", "mdns", "tcp", "noise", "yamux", "tokio", "macros", "request-response", "cbor"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
futures = "0.3"
log = "0.4"
hex = "0.4.3"
async-trait = "0.1"
rand = "0.9.2"
